Displayed erxhover div as block to fix alignment error

--- a/assets/ais/styles/aisCommon.css
+++ b/assets/ais/styles/aisCommon.css
@@ -302,6 +302,7 @@ a {
 .showHoverable.erxHoverArea {
   margin-left: 18px !important;
   padding: 0 .125rem;
+  display: block;
 }
 
 .information,
